# annotAIte

./: .readthedocs.yaml  CODE_REVIEW.md  LICENSE  README.md  pyproject.toml
annotAIte/: __init__.py  cluster.py  config.py  embed.py  harmonize.py  io.py  multi_scale.py  patches.py  pipeline.py  preprocess.py  reconstruct.py  types.py  utils.py
annotAIte.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: api-reference.rst  conf.py  examples.rst  index.rst  installation.rst  readme.rst  requirements.txt  user-guide.rst
examples/: README.md  test_pipeline_basic.ipynb
examples/.ipynb_checkpoints/: test_pipeline_basic-checkpoint.ipynb
napari_annotAIte/: __init__.py  _hooks.py  _version.py  _widget.py  palette_io.py
tests/: __init__.py  test_harmonize.py  test_multi_scale.py  test_pipeline.py  test_reconstruct.py
